another alignment fix

--- a/app/assets/stylesheets/submissions.css.scss
+++ b/app/assets/stylesheets/submissions.css.scss
@@ -46,7 +46,7 @@ body.submissions {
             width: 200px;
             margin-left: 10px;
             position: relative;
-            top: 2px;
+            top: 4px;
         }
 
         #edit_link {
